New use case: get songs that does not belong to a setlist.
